<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sharifian.shaheen.mygradetracker.CreateClass">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_class_title"
        android:id="@+id/createClassTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_text_view"
        android:id="@+id/classTextView"
        android:textSize="35dp"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/createClassTitleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ETclassName"
        android:ems="8"
        android:layout_alignBottom="@+id/classTextView"
        android:layout_alignLeft="@+id/createClassTitleTextView"
        android:layout_alignStart="@+id/createClassTitleTextView"
        android:layout_alignRight="@+id/createClassTitleTextView"
        android:layout_alignEnd="@+id/createClassTitleTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homework_text_view"
        android:textSize="25dp"
        android:id="@+id/homeworkTextView"

        android:layout_below="@+id/classTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/midterm_text_view"
        android:id="@+id/midtermTextView"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/homeworkTextView"
        android:textSize="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_text_view"
        android:id="@+id/finalTextView"
        android:textSize="25dp"
        android:layout_below="@+id/participationTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labs_text_view"
        android:id="@+id/LabsTextView"
        android:textSize="25dp"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/ETMidterm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participation_text_view"
        android:id="@+id/participationTextView"
        android:layout_marginTop="39dp"
        android:textSize="25dp"
        android:layout_below="@+id/LabsTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ETMidterm"
        android:layout_alignBottom="@+id/midtermTextView"
        android:layout_toEndOf="@+id/ETclassName"
        android:layout_toRightOf="@+id/ETclassName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ETHomework"
        android:layout_alignBottom="@+id/homeworkTextView"
        android:layout_toRightOf="@+id/ETclassName"
        android:layout_toEndOf="@+id/ETclassName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ETLabs"
        android:layout_alignBottom="@+id/LabsTextView"
        android:layout_alignLeft="@+id/ETMidterm"
        android:layout_alignStart="@+id/ETMidterm"
        android:layout_alignRight="@+id/ETMidterm"
        android:layout_alignEnd="@+id/ETMidterm" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ETParticipation"
        android:layout_alignBottom="@+id/participationTextView"
        android:layout_alignLeft="@+id/ETLabs"
        android:layout_alignStart="@+id/ETLabs" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ETFinal"
        android:layout_alignBottom="@+id/finalTextView"
        android:layout_alignLeft="@+id/ETParticipation"
        android:layout_alignStart="@+id/ETParticipation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        android:id="@+id/okButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/homeworkTextView"
        android:layout_toEndOf="@+id/homeworkTextView"
        android:clickable="true"
        android:onClick="onClickToMyClasses" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Weight (%)"
        android:id="@+id/textView"
        android:layout_below="@+id/ETclassName"
        android:layout_toRightOf="@+id/ETclassName"
        android:layout_above="@+id/ETHomework"
        android:layout_alignRight="@+id/ETHomework"
        android:layout_alignEnd="@+id/ETHomework"
        android:textSize="20dp" />

</RelativeLayout>
